[tool.poetry]
name = "python-intermediate-inflammation"
version = "0.1.0"
description = ""
authors = ["Jacob Wilkinson <wilkija@gmail.com>"]
readme = "README.md"
packages = [{include = "python_intermediate_inflammation"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
